# shinka

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  build.rs  deploy.yaml  flake.nix
.github/workflows/: image-push.yml
deploy/: configmap.yaml  deployment.yaml  grafana-dashboard.yaml  kustomization.yaml  namespace.yaml  prometheus-rules.yaml  service.yaml  servicemonitor.yaml
deploy/crds/: shinka.pleme.io_databasemigrations.yaml
deploy/rbac/: role.yaml  rolebinding.yaml  serviceaccount.yaml
docs/: API_DESIGN.md
examples/: clickhouse_m0.rs
module/: default.nix  nixos.nix
nix/: shinka.nix
proto/: shinka.proto
src/: circuit_breaker.rs  clickhouse.rs  config.rs  copy_model.rs  direct.rs  error.rs  extract.rs  health.rs  leader.rs  lib.rs  main.rs  metrics.rs  redact.rs  util.rs  wait.rs  webhook.rs
src/api/: graphql.rs  grpc.rs  mod.rs  rest.rs  service.rs  types.rs
src/controller/: discord.rs  events.rs  finalizers.rs  mod.rs  reconciler.rs  webhook.rs
src/controller/reconciler/: checksum.rs  image.rs  mod.rs  notify.rs  state_clickhouse.rs  state_direct.rs  state_failed.rs  state_health.rs  state_migrating.rs  state_pending.rs  status.rs
src/crd/: database_migration.rs  migration_run.rs  mod.rs
src/database/: cnpg.rs  mod.rs
src/migrator/: checksum_reconciler.rs  job_builder.rs  job_watcher.rs  mod.rs  preflight.rs  types.rs
