[package]
name = "shinka"
version = "0.1.0"
edition = "2021"
authors = ["Pleme Team <team@pleme.io>"]
description = "Shinka (進化) - GitOps-native database migration operator for Kubernetes"
license = "MIT"
repository = "https://github.com/pleme-io/shinka"
homepage = "https://github.com/pleme-io/shinka"
readme = "README.md"
keywords = ["kubernetes", "operator", "database", "migration", "gitops"]
categories = ["command-line-utilities", "database"]
exclude = ["deploy/", "docs/", "module/", "proto/", "target/", "result-*", "Cargo.nix", "flake.*"]

[lib]
name = "shinka"
path = "src/lib.rs"

[[bin]]
name = "shinka"
path = "src/main.rs"

[[bin]]
name = "shinka-cli"
path = "src/bin/shinka-cli.rs"

[features]
default = []
# TLS support for admission webhook server (pulls in aws-lc-sys via rustls)
tls = ["dep:axum-server"]
# gRPC support - requires protoc at build time
grpc = ["dep:tonic", "dep:prost", "dep:prost-types", "dep:tonic-build"]

[dependencies]
# Kubernetes client and runtime
kube = { version = "0.96", features = ["runtime", "client", "derive", "rustls-tls"], default-features = false }
k8s-openapi = { version = "0.23", features = ["v1_31"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# Graceful termination (shared drain coordinator across pleme-io daemons)
tsunagu = { git = "https://github.com/pleme-io/tsunagu" }

# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = { version = "0.8", features = ["chrono"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Time utilities
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

# HTTP server (REST API)
axum = { version = "0.8", features = ["json"] }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }

# HTTP client (for shinka-wait init container)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# GraphQL
async-graphql = { version = "7.0", features = ["chrono", "tracing"] }
async-graphql-axum = "7.0"

# gRPC (optional - requires protoc at build time)
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }

# Metrics
prometheus = "0.13"

# Database connection for checksum reconciliation
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres"] }

# Cryptographic hashing for checksum calculation
sha2 = "0.10"

# Regex for log parsing
regex = "1.11"

# Lazy initialization (OnceLock pattern)
once_cell = "1.19"

# UUID for API identifiers
uuid = { version = "1.10", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = { version = "0.12", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
